[gd_scene load_steps=6 format=3 uid="uid://kyry78favrgh"]

[ext_resource type="Script" uid="uid://csh3j1fwfr2tj" path="res://scripts/UI/boss_skills_bar.gd" id="1_rari1"]
[ext_resource type="Texture2D" uid="uid://bnoje7i2okjtp" path="res://assets/UI_Visuals/Skills_Icons/guard.png" id="2_rari1"]
[ext_resource type="Texture2D" uid="uid://ccapfxxjtvyfw" path="res://assets/UI_Visuals/Skills_Icons/melee_buff.png" id="3_blrqp"]
[ext_resource type="Texture2D" uid="uid://dsnlxit2ht1x7" path="res://assets/UI_Visuals/Skills_Icons/light_attack.png" id="4_ppqja"]
[ext_resource type="PackedScene" uid="uid://da1rs613vwf7w" path="res://scenes/UI/boss_preview_arrows.tscn" id="5_rari1"]

[node name="BossSkillsBar" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_rari1")
metadata/_edit_horizontal_guides_ = [1078.0, 0.0]
metadata/_edit_vertical_guides_ = [1920.0, 1.0]

[node name="TripleSkills" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="TripleSkills"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_right = 293.33334
offset_bottom = 50.0
color = Color(0.5809118, 0.0007600808, 0.6781777, 1)

[node name="EmptySkillsContainer" type="GridContainer" parent="TripleSkills"]
layout_mode = 1
offset_left = 6.0
offset_top = 5.3333335
offset_right = 356.0
offset_bottom = 55.333332
scale = Vector2(0.8, 0.8)
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 6
columns = 5

[node name="Skill1" type="ColorRect" parent="TripleSkills/EmptySkillsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.033853278, 0.033853278, 0.033853274, 1)

[node name="Skill2" type="ColorRect" parent="TripleSkills/EmptySkillsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.033853278, 0.033853278, 0.033853274, 1)

[node name="Skill3" type="ColorRect" parent="TripleSkills/EmptySkillsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.033853278, 0.033853278, 0.033853274, 1)

[node name="Skill4" type="ColorRect" parent="TripleSkills/EmptySkillsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.033853278, 0.033853278, 0.033853274, 1)

[node name="Skill5" type="ColorRect" parent="TripleSkills/EmptySkillsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
color = Color(0.033853278, 0.033853278, 0.033853274, 1)

[node name="SkillsContainer" type="GridContainer" parent="TripleSkills"]
visible = false
layout_mode = 0
offset_left = 79.333336
offset_top = 5.3333397
offset_right = 329.33334
offset_bottom = 55.33334
scale = Vector2(0.8, 0.8)
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 5

[node name="Skill1" type="TextureRect" parent="TripleSkills/SkillsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_rari1")

[node name="Skill2" type="TextureRect" parent="TripleSkills/SkillsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_blrqp")

[node name="Skill3" type="TextureRect" parent="TripleSkills/SkillsContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("4_ppqja")

[node name="SkillsSpeed" type="Control" parent="TripleSkills"]
anchors_preset = 0
offset_right = 18.0
offset_bottom = 19.333334

[node name="SpeedLabel" type="Label" parent="TripleSkills/SkillsSpeed"]
layout_mode = 0
offset_left = 30.0
offset_top = 16.666666
offset_right = 85.0
offset_bottom = 50.666664
theme_override_font_sizes/font_size = 24
text = "6"

[node name="SpeedLabel2" type="Label" parent="TripleSkills/SkillsSpeed"]
layout_mode = 0
offset_left = 90.66667
offset_top = 16.666672
offset_right = 145.66667
offset_bottom = 50.66667
theme_override_font_sizes/font_size = 24
text = "7"

[node name="SpeedLabel3" type="Label" parent="TripleSkills/SkillsSpeed"]
layout_mode = 0
offset_left = 151.33334
offset_top = 17.333328
offset_right = 206.33334
offset_bottom = 51.33333
theme_override_font_sizes/font_size = 24
text = "6"

[node name="SpeedLabel4" type="Label" parent="TripleSkills/SkillsSpeed"]
layout_mode = 0
offset_left = 210.66667
offset_top = 15.333336
offset_right = 265.6667
offset_bottom = 49.333336
theme_override_font_sizes/font_size = 24
text = "7"

[node name="SpeedLabel5" type="Label" parent="TripleSkills/SkillsSpeed"]
layout_mode = 0
offset_left = 271.33334
offset_top = 18.0
offset_right = 326.33334
offset_bottom = 52.0
theme_override_font_sizes/font_size = 24
text = "6"

[node name="BossPreviewArrows" parent="." instance=ExtResource("5_rari1")]
position = Vector2(250, -49.333336)
trim_start = 0.0
